# disease_predict

./: .gitignore  README.md  backend_test.py  pyproject.toml  requirements.txt  vercel.json
backend/: app.py  database.py  requirements.txt  schemas.py
backend/models/: disease_model.pkl  label_encoder.pkl  model_metrics.json
backend/routes/: admin.py  auth.py  prediction.py
backend/utils/: auth.py  logging_config.py  security.py
dataset/: disease_dataset.csv
frontend/: dashboard.html  index.html  login.html
frontend/css/: auth.css  dashboard.css  landing.css
frontend/js/: auth.js  dashboard.js
training/: train_model.py
