[project]
name = "medipredict"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pymongo>=4.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.5",
    "passlib[bcrypt]>=1.7.4",
    "python-jose>=3.3.0",
    "pandas>=1.0.0",
    "numpy>=1.0.0",
    "scikit-learn>=1.0.0",
    "joblib>=1.0.0",
    "reportlab>=3.6.0",
    "email-validator>=2.0.0"
]